<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">温馨闹钟</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">主页</string>
    <string name="lightbtn">开灯</string>
    <string name="record">录音</string>
    <string name="stop">停止</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="playlist">录音列表</string>
    <string name="upaCall">温馨电话</string>
    <string name="fname">ta是：</string>
    <string name="tips">通讯录中的谁？</string>
    <string name="datetime">日期-时间:</string>
    <string name="confim">确  认</string>
    <string name="contactitle">选择一位联系人</string>
    <string name="defaultimg"></string>
    <string name="newcontacts"></string>
    <string name="phonein"></string>
    
</resources>
